deploy/pre-prod/pre-prod-cluster/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    geo: uk
  name: tenant-a
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-must-have-geo
spec:
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Namespace
  parameters:
    labels:
    - key: geo
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    geo: uk
  name: default-deny-ingress
  namespace: tenant-a
spec:
  podSelector: {}
  policyTypes:
  - Ingress
